platform/kyverno/bad-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bad-deploy
  labels:
    app: bad-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bad-deploy
  template:
    metadata:
      labels:
        app: bad-deploy
    spec:
      containers:
      - name: nginx
        image: nginx:latest
